# Bluedog

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  bluedog.apparmor  bluedog.desktop  bluedog.desktop.in  clickable.yaml  manifest.json  manifest.json.in  requirements.txt  snapcraft.yaml
po/: bluedog.koji-m.pot  nl.po
qml/: Main.qml  MediaPickerPage.qml  PostDetailPage.qml  PostPage.qml  QuotePost.qml  SearchPage.qml  SettingsPage.qml  SignInPage.qml  TimelinePage.qml  TimelinePost.qml  TimelinePostContent.qml  UserProfilePage.qml
src/: auth.py  backend.py  backend.rs  build.rs  main.rs  qrc.rs
