[package]
name = "bluedog"
version = "0.2.0"
authors = ["Koji Matsumoto <otomustam.ijok@gmail.com>"]
edition = "2024"
build = "src/build.rs"

[dependencies]
qmetaobject = "0.2.9"
gettext-rs = "0.7"
cstr = "0.2.11"
cpp = "0.5"
tokio = { version = "1.48.0", features = ["full"] }
bsky-sdk = "0.1.22"
futures = "0.3.31"
atrium-api = "0.25.6"
serde = "1.0.228"
url = "2.5.7"

[build-dependencies]
cpp_build = "0.5"
